--- a/public/adminInventory.html
+++ b/public/adminInventory.html
@@ -122,7 +122,7 @@
       </ul>
     </nav>
 
-    <main>
+    <main class="main">
       <div class="container">
         <h1>Inventory Management</h1>
 
@@ -158,7 +158,7 @@
           </button>
         </div>
 
-        <section class="inventory-table">
+        <div class="inventory-table">
           <table>
             <thead>
               <tr>
@@ -191,7 +191,7 @@
               <!-- Product rows will be dynamically inserted here -->
             </tbody>
           </table>
-        </section>
+        </div>
         <!-- Pagination Controls -->
         <div id="pagination" class="pagination">
           <!-- Buttons will be dynamically inserted here -->
